--- a/development.html
+++ b/development.html
@@ -1,263 +1,134 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" class="html">
-  <head>
-    <title>Development — Sequel: The Database Toolkit for Ruby</title>
+<head>
+  <title>Development — Sequel: The Database Toolkit for Ruby</title>
 
-    <meta http-equiv="Content-Script-Type" content="text/javascript" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-    <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <meta content="en" name="content-language" />
+  <meta http-equiv="Content-Script-Type" content="text/javascript" />
+  <meta http-equiv="Content-Style-Type" content="text/css" />
+  <meta content="text/html; charset=utf-8" http-equiv="content-type" />
+  <meta content="en" name="content-language" />
 
-    <meta
-      name="keywords"
-      content="ruby, sequel, sql, toolkit, orm, plugins, activerecord, documentation, howto, news"
-    />
-    <meta
-      name="description"
-      content="Ruby Sequel is a lightweight database toolkit for Ruby."
-    />
+  <meta name="keywords" content="ruby, sequel, sql, toolkit, orm, plugins, activerecord, documentation, howto, news" />
+  <meta name="description" content="Ruby Sequel is a lightweight database toolkit for Ruby." />
 
-    <link
-      href="css/application.css"
-      media="screen"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="css/development.css"
-      media="screen"
-      rel="stylesheet"
-      type="text/css"
-    />
-  </head>
-  <body class="body">
-    <header class="header">
-      <nav class="nav nav--header">
-        <a href="index.html">
-          <img
-            src="images/ruby-sequel.svg"
-            alt="Ruby Sequel Logo"
-            class="nav__img nav__img--header"
-          />
-        </a>
-        <ul class="nav__ul nav__ul--header">
-          <li class="nav__li">
-            <a href="documentation.html" class="nav__a">Documentation</a>
-          </li>
-          <li class="nav__li">
-            <a href="plugins.html" class="nav__a">Plugins</a>
-          </li>
-          <li class="nav__li">
-            <a href="development.html" class="nav__a">Development</a>
-          </li>
-          <li class="nav__li">
-            <a href="media.html" class="nav__a">Media</a>
-          </li>
-        </ul>
-        <form action="http://www.google.com/search">
-          <input
-            type="hidden"
-            name="sitesearch"
-            value="sequel.jeremyevans.net"
-          />
-          <input
-            class="nav__input"
-            type="search"
-            placeholder="Search docs, plugins, etc..."
-            name="q"
-            value=""
-          />
-        </form>
-      </nav>
-    </header>
+  <link href="css/application.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="css/development.css" media="screen" rel="stylesheet" type="text/css" />
+</head>
+<body class="body">
+  <header class="header">
+    <nav class="nav nav--header">
+      <a href="index.html">
+        <img src="images/ruby-sequel.svg" alt="Ruby Sequel Logo" class="nav__img nav__img--header" />
+      </a>
+      <ul class="nav__ul nav__ul--header">
+        <li class="nav__li">
+          <a href="documentation.html" class="nav__a">Documentation</a>
+        </li>
+        <li class="nav__li">
+          <a href="plugins.html" class="nav__a">Plugins</a>
+        </li>
+        <li class="nav__li">
+          <a href="development.html" class="nav__a">Development</a>
+        </li>
+        <li class="nav__li">
+          <a href="media.html" class="nav__a">Media</a>
+        </li>
+      </ul>
+      <form class="nav__form" action="http://www.google.com/search">
+        <input type="hidden" name="sitesearch" value="sequel.jeremyevans.net" />
+        <input class="nav__input" type="search" placeholder="Search docs, plugins, etc..." name="q" value="" />
+      </form>
+    </nav>
+  </header>
 
-    <main class="main">
-      <div class="main__container">
-        <section class="development">
-          <h1 class="h1">Development</h1>
+  <main class="main">
+    <div class="main__container">
+      <section class="development">
+  <h1 class="h1">Development</h1>
 
-          <hr class="hr" />
+  <hr class="hr" />
 
-          <h2 class="h2">
-            Sequel is being actively developed.
-            <span class="h2__span"
-              >New versions of Sequel are generally released monthly during the
-              first week of the month. You can join in on the discussions, ask
-              questions, suggest features, and discuss Sequel in general by
-              joining our Google Group:
-              <a class="a" href="http://groups.google.com/group/sequel-talk"
-                >Sequel Talk</a
-              >
-              or
-              <a
-                class="a"
-                href="https://github.com/jeremyevans/sequel/discussions"
-                >GitHub Discussions</a
-              >.</span
-            >
-          </h2>
+  <h2 class="h2">Sequel is being actively developed. <span class="h2__span">New versions of Sequel are generally released monthly during the first week of the month. You can join in on the discussions, ask questions, suggest features, and discuss Sequel in general by joining our Google Group: <a class="a" href="http://groups.google.com/group/sequel-talk">Sequel Talk</a> or <a class="a" href="https://github.com/jeremyevans/sequel/discussions">GitHub Discussions</a>.</span></h2>
 
-          <hr class="hr" />
+  <hr class="hr" />
 
-          <div class="row row--grid">
-            <div class="row__item">
-              <a name="bugs"></a>
-              <h3 class="h3">Reporting Bugs</h3>
-              <p class="p">
-                To report a bug in Sequel, use
-                <a class="a" href="https://github.com/jeremyevans/sequel/issues"
-                  >GitHub Issues</a
-                >. If you aren't sure if something is a bug, post a question on
-                <a
-                  class="a"
-                  href="https://github.com/jeremyevans/sequel/discussions"
-                  >GitHub Discussions</a
-                >
-                or the
-                <a class="a" href="http://groups.google.com/group/sequel-talk"
-                  >Google Group</a
-                >.
-              </p>
-              <p class="p">
-                Note that GitHub Issues should not be used to ask questions
-                about how to use Sequel, use
-                <a
-                  class="a"
-                  href="https://github.com/jeremyevans/sequel/discussions"
-                  >GitHub Discussions</a
-                >
-                or the
-                <a class="a" href="http://groups.google.com/group/sequel-talk"
-                  >Google Group</a
-                >
-                for that.
-              </p>
-            </div>
+  <div class="row row--grid">
+    <div class="row__item">
+      <a name="bugs"></a>
+      <h3 class="h3">Reporting Bugs</h3>
+      <p class="p">To report a bug in Sequel, use <a class="a" href="https://github.com/jeremyevans/sequel/issues">GitHub Issues</a>.  If you aren't sure if something is a bug, post a question on <a class="a" href="https://github.com/jeremyevans/sequel/discussions">GitHub Discussions</a> or the <a class="a" href='http://groups.google.com/group/sequel-talk'>Google Group</a>.</p>
+      <p class="p">Note that GitHub Issues should not be used to ask questions about how to use Sequel, use <a class="a" href="https://github.com/jeremyevans/sequel/discussions">GitHub Discussions</a> or the <a class="a" href="http://groups.google.com/group/sequel-talk">Google Group</a> for that.</p>
+    </div>
 
-            <div class="row__item">
-              <a name="contributing"></a>
-              <h3 class="h3">Contributing</h3>
-              <p class="p">
-                The easiest way to contribute is to use git, post the changes to
-                a public repository, and send a pull request, either via GitHub
-                or the Google Group. Posting patches to the bug tracker or the
-                Google Group works fine as well.
-              </p>
-              <p class="p">
-                You can find the
-                <a
-                  class="a"
-                  href="https://github.com/jeremyevans/sequel/blob/master/CONTRIBUTING"
-                  >contributing guideliness</a
-                >
-                on GitHub.
-              </p>
-            </div>
+    <div class="row__item">
+      <a name="contributing"></a>
+      <h3 class="h3">Contributing</h3>
+      <p class="p">The easiest way to contribute is to use git, post the changes to a public repository, and send a pull request, either via GitHub or the Google Group.  Posting patches to the bug tracker or the Google Group works fine as well.</p>
+      <p class="p">You can find the <a class="a" href="https://github.com/jeremyevans/sequel/blob/master/CONTRIBUTING">contributing guideliness</a> on GitHub.</p>
+    </div>
 
-            <div class="row__item">
-              <a name="code"></a>
-              <h3 class="h3">Source Code</h3>
-              <p class="p">
-                The master source code repository is
-                <a class="a" href="https://github.com/jeremyevans/sequel/"
-                  >jeremyevans/sequel</a
-                >
-                on GitHub.
-              </p>
-            </div>
+    <div class="row__item">
+      <a name="code"></a>
+      <h3 class="h3">Source Code</h3>
+      <p class="p">The master source code repository is <a class="a" href="https://github.com/jeremyevans/sequel/">jeremyevans/sequel</a> on GitHub.</p>
+    </div>
 
-            <div class="row__item">
-              <a name="license"></a>
-              <h3 class="h3">License</h3>
-              <p class="p">
-                Sequel is distributed under the
-                <a class="a" href="rdoc/files/MIT-LICENSE.html">MIT License</a>.
-                Patches are assumed to be submitted under the same license as
-                Sequel.
-              </p>
-            </div>
-          </div>
-        </section>
-      </div>
-    </main>
+    <div class="row__item">
+      <a name="license"></a>
+      <h3 class="h3">License</h3>
+      <p class="p">Sequel is distributed under the <a class="a" href="rdoc/files/MIT-LICENSE.html">MIT License</a>.  Patches are assumed to be submitted under the same license as Sequel.</p>
+    </div>
+  </div>
+</section>
 
-    <footer class="footer">
-      <nav class="nav">
-        <a href="/">
-          <img
-            src="images/ruby-sequel-monocrome.svg"
-            alt="Ruby Sequel Logo"
-            class="nav__img nav__img--footer"
-          />
-        </a>
-        <ul class="nav__ul">
-          <li class="nav__li">
-            <a href="documentation.html" class="nav__a">Documentation</a>
-            <a href="documentation.html#general-overview" class="a"
-              >General Overview</a
-            >
-            <a href="documentation.html#databases" class="a">Databases</a>
-            <a href="documentation.html#datasets" class="a">Datasets</a>
-            <a href="documentation.html#models" class="a">Models</a>
-            <a href="documentation.html#misc" class="a">Misc</a>
-            <a href="documentation.html#rdoc" class="a">RDoc</a>
-          </li>
-          <li class="nav__li">
-            <a href="plugins.html" class="nav__a">Plugins</a>
-            <a href="plugins.html#model-plugins" class="a">Model Plugins</a>
-            <a href="plugins.html#sequel-extensions" class="a"
-              >Sequel Extensions</a
-            >
-          </li>
-          <li class="nav__li">
-            <a href="development.html" class="nav__a">Development</a>
-            <a href="development.html#bugs" class="a">Reporting Bugs</a>
-            <a href="development.html#contribute" class="a">Contribute</a>
-            <a href="development.html#code" class="a">Source Code</a>
-            <a href="development.html#license" class="a">License</a>
-            <a
-              href="https://github.com/jeremyevans/sequel/"
-              class="a"
-              target="_blank"
-              >GitHub</a
-            >
-            <a
-              href="https://rubygems.org/gems/sequel/"
-              class="a"
-              target="_blank"
-              >RubyGems</a
-            >
-            <a
-              href="https://sequel.jeremyevans.net/blog.html"
-              class="a"
-              target="_blank"
-              >Blog</a
-            >
-          </li>
-          <li class="nav__li">
-            <a href="media.html" class="nav__a">Media</a>
-            <a href="media.html#articles" class="a">Articles</a>
-            <a href="media.html#presentations" class="a">Presentations</a>
-            <a href="media.html#using-sequel" class="a">Using Sequel</a>
-            <a href="media.html#logos" class="a">Logos &amp; Badges</a>
-          </li>
-        </ul>
-        <form action="http://www.google.com/search">
-          <input
-            type="hidden"
-            name="sitesearch"
-            value="sequel.jeremyevans.net"
-          />
-          <input
-            class="nav__input"
-            type="search"
-            placeholder="Search docs, plugins, etc..."
-            name="q"
-            value=""
-          />
-        </form>
-      </nav>
-    </footer>
-  </body>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <nav class="nav">
+      <a href="/">
+        <img src="images/ruby-sequel-monocrome.svg" alt="Ruby Sequel Logo" class="nav__img nav__img--footer" />
+      </a>
+      <ul class="nav__ul">
+        <li class="nav__li">
+          <a href="documentation.html" class="nav__a">Documentation</a>
+          <a href="documentation.html#general-overview" class="a">General Overview</a>
+          <a href="documentation.html#databases" class="a">Databases</a>
+          <a href="documentation.html#datasets" class="a">Datasets</a>
+          <a href="documentation.html#models" class="a">Models</a>
+          <a href="documentation.html#misc" class="a">Misc</a>
+          <a href="documentation.html#rdoc" class="a">RDoc</a>
+        </li>
+        <li class="nav__li">
+          <a href="plugins.html" class="nav__a">Plugins</a>
+          <a href="plugins.html#model-plugins" class="a">Model Plugins</a>
+          <a href="plugins.html#sequel-extensions" class="a">Sequel Extensions</a>
+        </li>
+        <li class="nav__li">
+          <a href="development.html" class="nav__a">Development</a>
+          <a href="development.html#bugs" class="a">Reporting Bugs</a>
+          <a href="development.html#contribute" class="a">Contribute</a>
+          <a href="development.html#code" class="a">Source Code</a>
+          <a href="development.html#license" class="a">License</a>
+          <a href="https://github.com/jeremyevans/sequel/" class="a" target="_blank">GitHub</a>
+          <a href="https://rubygems.org/gems/sequel/" class="a" target="_blank">RubyGems</a>
+          <a href="https://sequel.jeremyevans.net/blog.html" class="a" target="_blank">Blog</a>
+        </li>
+        <li class="nav__li">
+          <a href="media.html" class="nav__a">Media</a>
+          <a href="media.html#articles" class="a">Articles</a>
+          <a href="media.html#presentations" class="a">Presentations</a>
+          <a href="media.html#using-sequel" class="a">Using Sequel</a>
+          <a href="media.html#logos" class="a">Logos &amp; Badges</a>
+        </li>
+      </ul>
+      <form class="nav__form" action="http://www.google.com/search">
+        <input type="hidden" name="sitesearch" value="sequel.jeremyevans.net" />
+        <input class="nav__input" type="search" placeholder="Search docs, plugins, etc..." name="q" value="" />
+      </form>
+    </nav>
+  </footer>
+</body>
 </html>
